# aztec_fuzzing

./: .gitignore  .gitmodules  README.md
acir/native_types/witness/: Cargo.toml
acir/native_types/witness_map/: Cargo.toml
acir/native_types/witness_map_fuzzing/: Cargo.toml
acir/native_types/witness_map_fuzzing_replayer/: Cargo.toml
acir_field/generic_ark/tests/inverse/: Cargo.toml
acir_field/generic_ark/tests/inverse/src/: main.rs
acir_field/reports/: FieldElement_i128_attempt_to_negate_with_overflow.md  FieldElement_overflowing_using_to_u128_function.md
blackbox_solver/blake2s/: Cargo.toml
blackbox_solver/blake2s/src/: main.rs
blackbox_solver/generic_hash_256/: Cargo.toml
blackbox_solver/generic_hash_to_field/: Cargo.toml
blackbox_solver/hash_to_field_128_security/: Cargo.toml
blackbox_solver/keccak256/: Cargo.toml
blackbox_solver/sha256/: Cargo.toml
brillig_vm/black_box/: Cargo.toml
grammar_fuzzing/: README.md
grammar_fuzzing/libafl_nautilus/: Cargo.toml  noir.json
grammar_fuzzing/libafl_nautilus/src/: main.rs  tools.rs
grammar_fuzzing/tree-splicer/: Cargo.toml
grammar_fuzzing/tree-splicer/crates/tree-splicer-noir/: Cargo.toml
grammar_fuzzing/tree-splicer/crates/tree-splicer-noir/src/: main.rs
nargo_cli/: Cargo.toml
nargo_cli/src/: errors.rs  lib.rs  main.rs
nargo_cli/tests/: execute.rs
noir-minimizer/: Cargo.toml  README.md
noir-minimizer/corpus/: crash-1.nr  crash-2.nr
noir-minimizer/noirbin/: Nargo.toml
noir-minimizer/src/: main.rs
noir_fuzzers/: Cargo.toml  Dockerfile  README.md  create_corpus.sh  entrypoint.sh
noir_fuzzers/data_corpus/: data0  data1  data10  data2  data3  data4  data5  data6  data7  data8  data9
noir_fuzzers/dharma_grammars/: noir_func.dg
noir_fuzzers/noir_smith/: Cargo.toml
noir_fuzzers/noir_smith/src/functions/: function.rs  lambda.rs  list_functions.rs  method.rs  mod.rs
noir_fuzzers/noir_smith/src/imported_libraries/: std_lib.rs
noir_fuzzers/noir_smith/src/instructions/: comparison_instruction.rs  mod.rs  type_instruction.rs
noir_fuzzers/noir_smith/src/statements/: declaration_statement.rs
noir_fuzzers/noir_smith/src/tools/: constants.rs  mod.rs
noir_fuzzers/noir_smith/src/variables/: basic_trait.rs  bloc_data.rs  list_structs.rs  mod.rs  operand.rs  operation.rs  operator.rs  value.rs  variable.rs
noir_fuzzers/src/: basic_cmd_run.rs  basic_run.rs  dharma_grammar_run.rs  error_management.rs  hfuzz_cmd_run.rs  hfuzz_run.rs  hfuzz_run_parser.rs  reproducer.rs
noir_generator/: AST.txt  Cargo.toml  TODO.md  config.toml  simple_main_generator.py  values_generators.py
noir_generator/archives/python_versions/v2/: experimental_generator.py
noir_generator/archives/rust_versions/v1/: test.rs
noir_generator/archives/rust_versions/v1/src/: body_generator.rs  function.rs  main.rs
noir_generator/dharma_grammars/: noir_main.dg
noir_generator/noir_generator/: Cargo.toml  README.md  TODO.md  compile_noir.sh  noteRefacto  script.sh  sortie
noir_generator/noir_generator/crash_cases/: assertion_failed.nr  overflow.nr
noir_generator/noir_generator/noir_project/: Nargo.toml
noir_generator/noir_generator/src/: affectation_operation.rs  arithmetic_operation.rs  beautifier.rs  binary_operation_functions.rs  bloc_variables.rs  constants.rs  generate_function.rs  generate_instruction.rs  main.rs  operators.rs  random.rs  statments.rs  tmp.rs  types.rs  unary_operation_functions.rs  values.rs  variable.rs  variables.rs
noir_generator/noir_generator/src/instructions/: comparison_instruction.rs  generate_assert.rs  generate_instruction.rs  generate_operation.rs  generate_variable_declaration.rs  mod.rs  type_instruction.rs
noir_generator/noir_generator/src/statements/: assert_statement.rs  mod.rs  operation_statement.rs  random_statement.rs  variable_declaration_statement.rs
noir_generator/noir_generator/src/variables/: basic_variables.rs  bloc_variables.rs  interaction.rs  mod.rs  operation.rs  operator.rs  types.rs  value.rs  value_provider.rs  var_type.rs  variable.rs
noir_generator/noir_generator/testNoir/test/: Nargo.toml
noir_generator/noir_generator/testNoir/test/proofs/: test.proof
noir_generator/noir_generator/testNoir/test/src/: main.nr
noir_generator/rust_versions/: experimental_generator.rs  operations_manager.rs  safe_classic_generator.rs
noir_generator/rust_versions/noir_generator/: Cargo.toml
noir_generator/rust_versions/noir_generator/src/: classic_generator.rs  value_generator.rs  variable.rs
noir_generator/rust_versions/tester/: Cargo.toml
noir_generator/rust_versions/tester/src/: affectation_operation.rs  arithmetic_operation.rs  beautifier.rs  binary_operation_functions.rs  main.rs  statments.rs  unary_operation_functions.rs  variables.rs
noir_generator/second_version/: Variable.py  classic_generator.py  noir_generator.py
noir_generator/src/: basic_cmd_run.rs  basic_run.rs  benchmark.rs  compilation_fuzzer.rs  compilation_fuzzer_custom.rs  constants.rs  dharma_grammar_run.rs  generate_code.rs  hfuzz_cmd_run.rs  hfuzz_run.rs  hfuzz_run_parser.rs  main.rs  parser_fuzzer.rs  random.rs  reproducer.rs  test copy.rs  test.rs  tools.rs
noir_generator/src/functions/: function.rs  lambda.rs  list_functions.rs  method.rs  mod.rs  tmp
noir_generator/src/instructions/: comparison_instruction.rs  generic_instruction.rs  mod.rs  type_instruction.rs
noir_generator/src/statements/: assert_statement.rs  declaration_statement.rs  operation_statement.rs  random_statement.rs  variable_declaration_statement.rs
noir_generator/src/tools/: error_management.rs  mod.rs
noir_generator/src/variables/: basic_trait.rs  bloc_data.rs  bloc_variables.rs  list_structs.rs  mod.rs  operand.rs  operation.rs  operator.rs  struct_type.rs  value.rs  var_type.rs  variable.rs
noir_smith/: Cargo.toml  README.md  config.toml
noir_smith/src/: lib.rs  main.rs
(+75 files in other folders)
