[package]
name = "noir_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
rand_core = "*"
rand_xorshift = "*"
lazy_static = "*"
backtrace = "0.3.54"
noirc_frontend = { path = "../noir/compiler/noirc_frontend" }
fm = { path = "../noir/compiler/fm" }

[profile.dev]
debug = true

[profile.release]
debug = true

