[package]
name = "inverse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
honggfuzz = "*"
acir_field = { path = "../../../../../acvm/acir_field" }
brillig = { path = "../../../../../acvm/brillig" }
brillig_vm = { path = "../../../../../acvm/brillig_vm" }
